# getm

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  README.md  environment-min.yml  environment-readthedocs.yml  environment.yml  install  install.bat  requirements.txt
.github/workflows/: getm.yml
conda.recipe/: meta.yaml
python/: CMakeLists.txt  _pygetm.pyx  pyproject.toml  setup.cfg  setup.cfg.template  setup.py
python/airsea/: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
python/airsea/examples/: formulations.ipynb
python/docs/source/: conf.py
python/docs/source/api/: pygetm.ice.rst  pygetm.input.era5.rst  pygetm.input.glodap.rst  pygetm.input.gotm.rst  pygetm.input.igotm.rst  pygetm.input.rst  pygetm.input.util.convert_ts.rst  pygetm.input.util.rst  pygetm.input.woa.rst  pygetm.internal_pressure.rst  pygetm.open_boundaries.rst  pygetm.output.memory.rst  pygetm.output.rst  pygetm.rst  pygetm.util.fill.rst  pygetm.util.nctools.rst  pygetm.util.rst  pygetm.vertical_coordinates.rst
python/examples/: Kelvin_wave_in_a_channel.ipynb  airsea.ipynb  box_spherical.py  fort.100  gotm.ipynb  grids.ipynb  interpolation.ipynb  north_sea.ipynb  north_sea.py  north_sea_legacy.py  northsea.ipynb  seamount.py  sylt.py  test_2d.ipynb  test_2d_periodic.ipynb  test_3d.ipynb  test_advection.ipynb  test_fabm.ipynb  test_gotm_and_gsw.ipynb  test_horizontal_diffusion.ipynb  test_lock_exchange.ipynb  test_vertical_coordinates.ipynb  test_vertical_coordinates.py  test_vertical_kb.py
python/pygetm/: .gitignore  __init__.py  airsea.py  constants.py  core.py  density.py  domain.py  fabm.py  ice.py  internal_pressure.py  legacy.py  mixing.py  momentum.py  open_boundaries.py  operators.py  parallel.py  radiation.py  rivers.py  simulation.py  tracer.py  vertical_coordinates.py  vertical_mixing.py
python/pygetm/input/: __init__.py  era5.py  glodap.py  gotm.py  igotm.py  tpxo.py  woa.py
python/pygetm/input/util/: __init__.py  convert_ts.py
python/pygetm/output/: __init__.py  memory.py  netcdf.py
python/pygetm/output/operators/: __init__.py
python/pygetm/util/: compare_nc.py  fill.py  interpolate.py  nctools.py
python/src/: .gitignore  filters.F90  gradient.F90  momentum.F90  test_adaptive.F90  tridiagonal.F90  vertical_adaptive.F90  wrapper.F90
python/tests/: test_2d_flow_symmetry.py  test_2d_transport.py  test_3d_barotropic.py  test_coriolis.py  test_domain.py  test_fabm.py  test_freshwater_fluxes.py  test_grid.py  test_ice.py  test_input.py  test_internal_pressure.py  test_land.py  test_mode_convergence.py  test_output.py  test_parallel_advection.py  test_radiation.py  test_rotation.py  test_vertical_coordinates.py  test_vertical_diffusion.py
src/: CMakeLists.txt
src/domain/: CMakeLists.txt  domain.F90
src/dynamics/: CMakeLists.txt
src/input/: CMakeLists.txt
src/memory/: CMakeLists.txt  grid.F90  logging.F90  memory_manager.F90  memory_manager.F90.template
src/output/: CMakeLists.txt
src/physics/: CMakeLists.txt
